--- a/about.html
+++ b/about.html
@@ -264,7 +264,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="http://github.com/ek2794/">
+  <a href="http://github.com/ek2794/emk">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
