--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="http://github.com/ek2794/">
+  <a href="http://github.com/ek2794/emk">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
