--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@ div.tocify {
   </a>
 </li>
 <li>
-  <a href="http://github.com/ek2794/emk">
+  <a href="http://github.com/ek2794/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -364,7 +364,8 @@ div.tocify {
 <p>This is my first website that I am building with Data Sciences I
 class. Here is a little bit about myself and also create a dashboard on
 the restaurant inspections in NYC.</p>
-<p><img src="images/resume.jpg" style="width:100%"></p>
+<p>Here is a snapshot of my resume with my education and work
+experience. <img src="images/resume.jpg" style="width:100%"></p>
 <p>I am currently a pediatric gastroenterology fellow at <a
 href="https://www.pediatrics.columbia.edu/education/fellowship-training/gastroenterology-hepatology-and-nutrition">Columbia</a></p>
 <p>You can find me on <a
@@ -374,6 +375,8 @@ href="https://www.buoyhealth.com/writers/elise-kang-md">Buoy
 Health</a></p>
 <p>You can find me on <a href="https://github.com/ek2794">github</a> as
 well.</p>
+<p>Last but not least, I have an 18 month old son named Thomas.
+<img src="images/jiho.jpg" style="width:30%"></p>
 <p>Click <a href="dashboard.html">here</a> if you are interested in
 learning more about NYC restaurant inspections!</p>
 
