--- a/about.html
+++ b/about.html
@@ -283,13 +283,20 @@ $(document).ready(function () {
 </div>
 
 
-<div id="about-this-site" class="section level3">
-<h3>About this site</h3>
-<p>This website was made via R Studio and was generated through
-Github.</p>
-<p>This RStudio is from 2022.07.1 Build 554 titled “Spotted
-Wakerobin”</p>
-</div>
+<p><strong>EDUCATION</strong></p>
+<p>Case Western Reserve University School of Medicine, MD</p>
+<p>Harvard University, BA</p>
+<p><br><br />
+<br></p>
+<p><strong>WORK EXPERIENCES</strong></p>
+<p>Department of Pediatric Gastroenterology (2021-Present) <br> Columbia
+University Pediatric Gastroenterology Fellow</p>
+<p>Department of Pediatrics (2018-2021) <br> Columbia University
+Pediatric Resident</p>
+<p>Healthcare Innovation Technology Lab (2013-2014) <br> Research
+Coordinator</p>
+<p>Teach for America: Brooklyn Ascend Charter School (2012-2013) <br>
+Corps Member</p>
 
 
 
