--- a/index.html
+++ b/index.html
@@ -361,10 +361,9 @@ div.tocify {
 
 <p>Hello! Welcome to Elise’s website!</p>
 <p><img src="images/EK_headshot.jpg" style="width:50%"></p>
-<p>This is my first website that I am building through the Data Sciences
-I class. Here is a little bit about myself.</p>
-<p>Here is a snapshot of my resume with my education and work
-experience. <img src="images/resume.jpg" style="width:100%"></p>
+<p>Here you will find information <a href="about.html">about</a> myself
+as well as a <a href="dashboard.html">dashboard</a> if you are
+interested in learning more about NYC restaurant inspections!</p>
 <p>I am currently a pediatric gastroenterology fellow at <a
 href="https://www.pediatrics.columbia.edu/education/fellowship-training/gastroenterology-hepatology-and-nutrition">Columbia</a></p>
 <p>You can find me on <a
@@ -376,8 +375,6 @@ Health</a></p>
 well.</p>
 <p>Last but not least, I have an 18 month old son named Thomas.
 <img src="images/jiho.jpg" style="width:30%"></p>
-<p>Click <a href="dashboard.html">here</a> if you are interested in
-learning more about NYC restaurant inspections!</p>
 
 
 
