--- a/about.html
+++ b/about.html
@@ -289,14 +289,12 @@ $(document).ready(function () {
 <p><br><br />
 <br></p>
 <p><strong>WORK EXPERIENCES</strong></p>
-<p>Department of Pediatric Gastroenterology (2021-Present) <br> Columbia
-University Pediatric Gastroenterology Fellow</p>
-<p>Department of Pediatrics (2018-2021) <br> Columbia University
-Pediatric Resident</p>
-<p>Healthcare Innovation Technology Lab (2013-2014) <br> Research
-Coordinator</p>
-<p>Teach for America: Brooklyn Ascend Charter School (2012-2013) <br>
-Corps Member</p>
+<p>Department of Pediatric Gastroenterology (Current) <br> Columbia
+University <br> Fellow</p>
+<p>Department of Pediatrics <br> Columbia University<br> Resident</p>
+<p>Healthcare Innovation Technology Lab <br> Research Coordinator</p>
+<p>Teach for America: Brooklyn Ascend Charter School <br> Corps
+Member</p>
 
 
 
