--- a/index.html
+++ b/index.html
@@ -361,9 +361,9 @@ div.tocify {
 
 <p>Hello! Welcome to Elise’s website!</p>
 <p><img src="images/EK_headshot.jpg" style="width:50%"></p>
-<p>Here you will find information <a href="about.html">about</a> myself
-as well as a <a href="dashboard.html">dashboard</a> if you are
-interested in learning more about NYC restaurant inspections!</p>
+<p>Here you will find information <a href="about.html">about</a> as well
+as a <a href="dashboard.html">dashboard</a> if you are interested in
+learning more about NYC restaurant inspections!</p>
 <p>I am currently a pediatric gastroenterology fellow at <a
 href="https://www.pediatrics.columbia.edu/education/fellowship-training/gastroenterology-hepatology-and-nutrition">Columbia</a></p>
 <p>You can find me on <a
