--- a/about.html
+++ b/about.html
@@ -258,6 +258,9 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;elisekpx@gmail.com.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -290,9 +293,11 @@ $(document).ready(function () {
 <br></p>
 <p><strong>WORK EXPERIENCES</strong></p>
 <p>Department of Pediatric Gastroenterology (Current) <br> Columbia
-University <br> Fellow</p>
-<p>Department of Pediatrics <br> Columbia University<br> Resident</p>
-<p>Healthcare Innovation Technology Lab <br> Research Coordinator</p>
+University <br> Fellow <br></p>
+<p>Department of Pediatrics <br> Columbia University<br> Resident
+<br></p>
+<p>Healthcare Innovation Technology Lab <br> Research Coordinator
+<br></p>
 <p>Teach for America: Brooklyn Ascend Charter School <br> Corps
 Member</p>
 
