--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ href="https://www.buoyhealth.com/writers/elise-kang-md">Buoy
 Health</a></p>
 <p>You can find me on <a href="https://github.com/ek2794">github</a> as
 well.</p>
-<p>Last but not least, I have an 18 month old son named Thomas.
+<p>Last but not least, I have an 18 month old son named Thomas. <br>
 <img src="images/jiho.jpg" style="width:30%"></p>
 
 
